--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <script src='producto.js'></script>
-    <script src='inventario.js'></script>
+    <script src='base.js'></script>
+    <script src='ruta.js'></script>
 </head>
 <body>
         <label for='txtnombre'>
